Refactoring on WebFilter